# AnchorTokenStarter

./: Anchor.toml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: 00-quick-start.md
docs/brainstorms/: 2026-02-02-anchor-build-fixes-brainstorm.md  2026-02-02-solidity-dev-learning-path-brainstorm.md  2026-02-03-gyld-solidity-to-anchor-conversion.md
docs/concepts/: account-model.md  anchor-macros.md  pdas-explained.md  rust-survival.md
docs/patterns/: README.md
docs/patterns/initialization/: config-account.md  hello-world.md  simple-counter.md
docs/patterns/token-operations/: burn-tokens.md  create-mint.md  mint-tokens.md  transfer-tokens.md
docs/plans/: 2026-02-02-feat-solidity-dev-learning-path-cookbook-plan.md  2026-02-02-fix-anchor-program-id-mismatch-plan.md  2026-02-03-feat-access-registry-conversion-plan.md
docs/reference/: common-errors.md  solidity-comparison.md
programs/access-registry/: Cargo.toml
programs/access-registry/src/: error.rs  lib.rs  state.rs
programs/access-registry/src/instructions/: accept_ownership.rs  get_approved_batch.rs  initialize.rs  is_approved.rs  is_sanctioned_by_chainalysis.rs  mod.rs  set_blacklisted.rs  set_blacklisted_batch.rs  transfer_ownership.rs
programs/anchortokenstarter/: Cargo.toml
programs/anchortokenstarter/src/: lib.rs
programs/my-first-project/: Cargo.toml
scripts/: deploy-token.ts
tests/: access-registry.test.ts  anchortokenstarter.ts  my-first-project.ts
