[package]
name = "access-registry"
version = "0.1.0"
description = "Access Registry - Centralized blacklist registry with Chainalysis Oracle integration (GYLD Solidity → Anchor conversion)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "access_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
